# trademate

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements.txt
src/: constants.py  main.py
src/backtesting/: backtest.py  export.py
src/data/: data.py
src/data/api/: api_error.py  coindesk_api.py
src/gui/: home.py  results.py  shared_state.py
src/indicators/: atr.py  bollinger_bands.py  macd.py  rsi.py  simple_ma.py
src/models/: backtest_config.py  backtest_result.py  bot_config.py  condition_operator.py  indicator.py  trade.py  trade_condition.py
