[project]
name = "trademate"
version = "0.1.0"
description = "Trademate is used for advanced backtesting of financial assets including Forex, Stocks, and Crypto."
authors = [{ name="Nicholas Whitley" }, { name="James Hagerman" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
	"pandas",
	"requests"
] 
